GNOME Bugzilla – Bug 750292
gst_uri_handler_get_uri_type declared has mismatched return type
Last modified: 2015-06-02 19:36:57 UTC
"/builds/gstreamer1/gstreamer-1.4.3/gst/gsturi.c", line 643: identifier redeclared: gst_uri_handler_get_uri_type current : function(pointer to struct _GstURIHandler {}) returning unsigned int previous: function(pointer to struct _GstURIHandler {}) returning enum {GST_URI_SRC(2), GST_URI_SINK(1), GST_URI_UNKNOWN(0)} : "/builds/gstreamer1/gstreamer-1.4.3/gst/gsturi.h", line 147 cc: acomp failed for /builds/gstreamer1/gstreamer-1.4.3/gst/gsturi.c
Thanks, this should fix it: commit 935ecd85eaeb959158faa86ce32c03eca98a3665 Author: Tim-Philipp Müller <tim@centricular.com> Date: Tue Jun 2 20:32:35 2015 +0100 uri: match return type of get_uri_type() implementation to declaration https://bugzilla.gnome.org/show_bug.cgi?id=750292 Will also backport into 1.4 branch (PS: 1.4.5 is the latest release)