uri: match return type of get_uri_type() implementation to declaration

https://bugzilla.gnome.org/show_bug.cgi?id=750292